--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
     "postcss": "^8",
+    "sass-embedded": "^1.81.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
