--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "jotai": "^2.10.3",
     "lucide-react": "^0.460.0",
     "nanoid": "^5.0.8",
-    "next": "14.2.16",
+    "next": "^15.0.3",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
